--- a/src/app/pages/dashboard/contacts/contacts.component.html
+++ b/src/app/pages/dashboard/contacts/contacts.component.html
@@ -14,7 +14,7 @@
       <nb-list>
         <nb-list-item class="contact" *ngFor="let c of recent">
           <nb-user [picture]="c.user.picture" [name]="c.user.name" [title]="c.type" size="large"></nb-user>
-          <span class="caption">{{ c.time | date: 'shortTime' }}</span>
+          <span class="caption">  aaj ki taarikh  {{ c.time | date: 'shortTime' }}</span>
         </nb-list-item>
       </nb-list>
     </nb-tab>
