--- a/src/app/pages/layout/list/list.component.html
+++ b/src/app/pages/layout/list/list.component.html
@@ -1,7 +1,7 @@
 <div class="lists row">
   <div class="col-md-12 col-lg-6 col-xxxl-6">
     <nb-card class="list-card">
-      <nb-card-header>Some Fruits</nb-card-header>
+      <nb-card-header>Some Fruits pagal hai</nb-card-header>
       <nb-card-body>
         <nb-list>
           <nb-list-item *ngFor="let fruit of fruits">
