--- a/src/app/pages/charts/echarts/echarts.component.html
+++ b/src/app/pages/charts/echarts/echarts.component.html
@@ -25,7 +25,7 @@
   </div>
   <div class="col-lg-6">
     <nb-card>
-      <nb-card-header>Multiple x-axis</nb-card-header>
+      <nb-card-header>Stocks</nb-card-header>
       <nb-card-body>
         <ngx-echarts-multiple-xaxis></ngx-echarts-multiple-xaxis>
       </nb-card-body>
