--- a/src/app/pages/stock/csco/csco.component.html
+++ b/src/app/pages/stock/csco/csco.component.html
@@ -19,8 +19,8 @@
             </nb-card-body>
           </nb-card>
 -->
-<canvas id ="cs" width="700" height="600"></canvas>
-          
+<canvas id ="cs" width="700" height="600" style="border:1px solid #000000"></canvas>
+<canvas id ="cs2" width="700" height="600" style="border:1px solid #000000"></canvas>
         </div>
       </nb-card-body>
     </nb-card>
