multiple charts on a page

--- a/src/app/pages/stock/csco/csco.component.html
+++ b/src/app/pages/stock/csco/csco.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-12">
+ <!-- <div class="col-md-12">
     <nb-card>
       <nb-card-body>
         <div class="flex-centered col-xl-4 col-lg-6 col-md-8 col-sm-12">
-
+        -->
 
 <!--
           <h2 class="title">404 Page Not Found</h2>
@@ -20,12 +20,17 @@
           </nb-card>
 -->
 
-
-<canvas id ="cs" width="700" height="600" style="border:1px solid #000000;"></canvas>
-<canvas id ="cs2" width="700" height="600" style="border:1px solid #000000;"></canvas>
-
-        </div>
+<div class ="column">
+<canvas id ="cs" width="500" height="600" style="border:1px solid #000000;"></canvas>
+</div>
+<div class ="column">
+<canvas id ="cs2" width="500" height="600" style="border:1px solid #000000;"></canvas>
+</div>
+<div class = "column">
+  <canvas id ="cs3" width="500" height="600" style="border:1px solid #000000;"></canvas>
+</div>
+     <!--   </div>
       </nb-card-body>
     </nb-card>
-  </div>
+  </div> -->
 </div>
