--- a/src/app/pages/stock/csco/csco.component.scss
+++ b/src/app/pages/stock/csco/csco.component.scss
@@ -28,3 +28,14 @@ nb-card-body {
 .home-button {
   margin-bottom: 2rem;
 }
+
+.column {
+  float:left;
+  width:33.33%
+}
+
+.row:after{
+  content: "";
+  display : table;
+  clear : both;
+}
